--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
+    "graphql": "^15.8.0",
     "lodash": "^4.17.21",
+    "mongoose": "^6.9.1",
     "nodemon": "^2.0.20"
   }
 }
